--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="#nosotros">NOSOTROS</a></li>
                         <li><a href="#metodo">METODO</a></li>
-                        <li><a href="#horatios">HORARIOS</a></li>
+                        <li><a href="#horarios">HORARIOS</a></li>
                         <li><a href="#contacto">CONTACTO</a></li>
                     </ul>
                 </div>
@@ -50,11 +50,9 @@
                 <h2> julio cortazar</h2>
                 <h5>Vajilla inspirada en el libro de Cortazar. Hecha, dibujada y escrita a mano.</h5>
             </div>
-            <div class="col-lg-2 col-md-6 plato-rayuela"><img src="img/platorayuela.jpg" alt="plato playo rayuela">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aspernatur quasi labore cum quo error
-                    distinctio harum, dolor est corporis cupiditate commodi temporibus veniam ab amet corrupti? Iure,
-                    cupiditate asperiores?
-                    Voluptatibus cumque, consequuntur ea? Provident nam temporibus.
+            <div class="col-lg-2 col-md-6 plato-rayuela"><img src="img/platonegror.jpg" alt="plato playo rayuela"><img src="img/platoblanco.jpg" alt="plato playo rayuela">
+                <p>Lorem ipsum dolor adipisicing elit. Maxime aspernatur quasi labore cum quo error
+                    distinctio harum.
                 </p>
             </div>
         </div>
@@ -62,10 +60,10 @@
             <h4>algo sobre nosotros</h4><a name="nosotros"></a>
         </div>
         <div class="row cv">
-            <div class="col-lg-2 col-md-3 col-sm-6 face">
-                <h2>ANDY CAMBRA</h2><img src="img/cara.jpg" alt="Foto">
+            <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 face">
+                <h2>ANDY CAMBRA</h2><img src="img/andy.jpg" alt="Foto">
             </div>
-            <div class="col-lg-4 col-md-9 col-sm-6">
+            <div class="col-lg-4 col-md-9 col-sm-6 col-xs-6">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium blanditiis deleniti laborum, vel
                     rerum, placeat aperiam voluptatum hic neque molestias autem asperiores sed optio nihil modi!
                     Voluptas quasi pariatur expedita.</p>
@@ -78,11 +76,11 @@
                     rerum, placeat aperiam voluptatum hic neque molestias autem asperiores sed optio nihil modi!
                     Voluptas quasi pariatur expedita.</p>
             </div>
-            <div class="col-lg-2 highlights d-none d-lg-block d-xl-none">
-                <h3>Diseñadora grafica UBA 1989</h3>
-                <h3>Directora de arte Agencias de publicidad 1991-2000</h3>
-                <h3>Directora creativa Agencias de publicidad 2000-2005</h3>
-                <h3>Diseño de vajilla Cambra Compañía Cerámica 2008-2019</h3>
+            <div class="col-lg-2 highlights d-none d-lg-block d-xl-block">
+                <h3>Diseñadora grafica</h3><h3>UBA 1989</h3>
+                <h3>Directora de arte Agencias de publicidad</h3><h3>1991-2000</h3>
+                <h3>Directora creativa Agencias de publicidad</h3><h3>2000-2005</h3>
+                <h3>Diseño de vajilla Cambra Compañía Cerámica</h3><h3>2008-2019</h3>
             </div>
             <div class="col-lg-4 col-md-12 xxl">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -91,14 +89,29 @@
                             <img src="img/piedras1.jpg" class="d-block w-100" alt="fuente piedras xxl">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/maxi.jpg" class="d-block w-100" alt="maxitazas rayuela">
+                            <img src="img/macetasblancas.jpg" class="d-block w-100" alt="maxitazas rayuela">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/sushi.jpg" class="d-block w-100" alt="set de sushi">
+                            <img src="img/cuencosarco.jpg" class="d-block w-100" alt="set de sushi">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cuencobamboo.jpg" class="d-block w-100" alt="maxitazas rayuela">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cuadradobamboo.jpg" class="d-block w-100" alt="maxitazas rayuela">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/macetasmaranja.jpg" class="d-block w-100" alt="maxitazas rayuela">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/sushigrande.jpg" class="d-block w-100" alt="maxitazas rayuela">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cuncolabrado.jpg" class="d-block w-100" alt="maxitazas rayuela">
                         </div>
                     </div>
                 </div>
-                <h6>Plato fuente XXL pintado a mano</h6>
+                <h6>Piezas realizadas en distintas técnicas</h6>
             </div>
         </div>
         <div class="row metodo"><a name="metodo"></a>
@@ -129,51 +142,50 @@
             <h4>piezas del taller</h4>
         </div>
         <div class="row piezas">
-            <div class="col-lg-2 col-md-3 col-sm-6"><img src="img/macetas.jpg" alt="macetas de cerámica esmaltada">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-6"><img src="img/bows.jpg" alt=""></div>
-            <div class="col-lg-2 col-md-3 col-sm-6"><img src="img/xxl.jpg" alt=""></div>
-            <div class="col-lg-2 col-md-3 col-sm-6"><img src="img/kepp.JPG" alt=""></div>
-            <div class="col-lg-2 col-md-3 col-sm-6"></div>
-            <div class="col-lg-2 col-md-3 col-sm-6"></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/xxl.jpg" alt=""></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/mondmug.jpg" alt=""></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/platosand.jpg" alt=""></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/azu.jpg" alt=""></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/sand.jpg" alt=""></div>
+            <div class="col-lg-2 col-md-4 col-sm-6"><img src="img/solares.jpg" alt=""></div>
         </div>
         <div class="row second-piezas">
             <h5>elegí tu estilo, seguí tu instinto</h5>
         </div>
         <div class="row detalles">
-            <div class="col-lg-2 col-md-4 col-sm-6">
+            <div class="col-lg-2 col-md-4 order-1 col-sm-6">
                 <div class="circle">
                     <h2>MATERIALES</h2>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6">
+            <div class="col-lg-2 col-md-4 order-4 col-sm-6">
                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam illum ipsam autem expedita, aut ab
                     reiciendis fuga cum ut dolores aperiam similique nobis iste, culpa vitae nisi commodi maiores
                     adipisci?</P>
             </div>
-            <div class="col-lg-2 order-first order-lg-0 col-md-4 col-sm-6 order-sm-0">
+            <div class="col-lg-2 col-md-4 order-2 col-sm-6">
                 <div class="circle">
                     <h2>HERRAMIENTAS</h2>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6">
+            <div class="col-lg-2 col-md-4 order-5 col-sm-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime iusto alias quibusdam
                     accusantium hic maiores labore nostrum voluptate magnam eius possimus ullam placeat, aliquid quidem
                     temporibus cupiditate, autem nihil.</p>
             </div>
-            <div class="col-lg-2 order-first order-lg-0 col-md-4 col-sm-6 order-sm-0">
+            <div class="col-lg-2 col-md-4 order-3 col-sm-6">
                 <div class="circle">
                     <h2>ACCESORIOS</h2>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6">
+            <div class="col-lg-2 col-md-4 order-6 col-sm-6">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cumque ipsum quibusdam ipsam
                     dolores unde id iste veritatis animi, ratione et, placeat dolorum illo recusandae expedita atque
                     fuga quia voluptatibus!</p>
             </div>
         </div>
         <div class="row horarios"><a name="horarios"></a>
-            <div class="col-lg-4 col-md-3">
+            <div class="col-lg-4 col-md-5">
                 <h2>HORARIOS</h2>
                 <div class="horas">
                     <h3>lunes</h3>
@@ -187,12 +199,12 @@
                     <p>de 15:00 a 17:00hs</p>
                 </div>
             </div>
-            <div class="col-lg-8 col-md-9 sub">
+            <div class="col-lg-8 col-md-7 sub">
                 <h4>nuestro lugar de trabajo</h4>
                 <img src="img/taller.jpg" alt="cambra taller de cerámica">
             </div>
         </div>
-        <div class="row top">
+        <div class="row top"><a name="contacto"></a>
             <div class="col"><img src="img/logocc.jpg" alt="Cambra Cerámica"></div>
             <div class="col">
                 <div class="nav">
