--- a/index.html
+++ b/index.html
@@ -153,35 +153,35 @@
             <h5>elegí tu estilo, seguí tu instinto</h5>
         </div>
         <div class="row detalles">
-            <div class="col-lg-2 col-md-4 order-1 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="circle">
                     <h2>MATERIALES</h2>
                 </div>
-            </div>
-            <div class="col-lg-2 col-md-4 order-4 col-sm-6">
+                <div class="circle-text">
                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam illum ipsam autem expedita, aut ab
                     reiciendis fuga cum ut dolores aperiam similique nobis iste, culpa vitae nisi commodi maiores
                     adipisci?</P>
+                </div>
             </div>
-            <div class="col-lg-2 col-md-4 order-2 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="circle">
                     <h2>HERRAMIENTAS</h2>
                 </div>
-            </div>
-            <div class="col-lg-2 col-md-4 order-5 col-sm-6">
+                <div class="circle-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime iusto alias quibusdam
                     accusantium hic maiores labore nostrum voluptate magnam eius possimus ullam placeat, aliquid quidem
                     temporibus cupiditate, autem nihil.</p>
+                </div>
             </div>
-            <div class="col-lg-2 col-md-4 order-3 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="circle">
                     <h2>ACCESORIOS</h2>
                 </div>
-            </div>
-            <div class="col-lg-2 col-md-4 order-6 col-sm-6">
+                <div class="circle-text">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cumque ipsum quibusdam ipsam
                     dolores unde id iste veritatis animi, ratione et, placeat dolorum illo recusandae expedita atque
                     fuga quia voluptatibus!</p>
+                </div>
             </div>
         </div>
         <div class="row horarios"><a name="horarios"></a>
